--- a/db/my.cnf
+++ b/db/my.cnf
@@ -1,6 +1,9 @@
 [mysqld]
 character-set-server=utf8mb4
-collation-server=utf8mb4_unicode_ci
+collation-server=utf8mb4_bin
+skip-character-set-client-handshake
+innodb_file_per_table
+innodb_force_recovery=1
 
 [client]
 default-character-set=utf8mb4
