--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,53 @@
-version: '3.9'
+version: "3.9"
 
 services:
   # MySQL
   db:
     image: mysql:5.7.40
-    container_name: mysql_dev
+    container_name: mysql
     environment:
       MYSQL_ROOT_PASSWORD: railsdev
       MYSQL_USER: railsdev
       MYSQL_PASSWORD: railsdev
-      TZ: 'Asia/Tokyo'
     restart: always
     command: mysqld --skip-grant-tables --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
     volumes:
-    - ./db/data:/var/lib/mysql
-    - ./db/my.cnf:/etc/mysql/conf.d/my.cnf
+      - ./data/mysql:/var/lib/mysql
+      - ./data/my.cnf:/etc/mysql/conf.d/my.cnf
     ports:
-    - 3306:3306
+      - 3306:3306
+
+  redis:
+    image: redis:latest
+    container_name: redis
+    ports:
+      - 6379:6379
+    restart: always
+    volumes:
+      - ./data/redis:/data
+
+  mongo:
+    image: mongo:latest
+    container_name: mongo
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: root
+      MONGO_INITDB_ROOT_PASSWORD: railsdev
+    restart: always
+    ports:
+      - 27017:27017
+    volumes:
+      - ./data/mongo:/data/mongo
+      - ./data/configdb:/data/configdb
+
+  mongo-express:
+    image: mongo-express:latest
+    container_name: mongo_express
+    environment:
+      ME_CONFIG_MONGODB_ADMINUSERNAME: root
+      ME_CONFIG_MONGODB_ADMINPASSWORD: railsdev
+      ME_CONFIG_MONGODB_SERVER: mongo
+    restart: always
+    ports:
+      - 8081:8081
+    depends_on:
+      - mongo
