--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,8 @@
 version: "3.9"
 
 services:
-  # MySQL
   db:
+    platform: linux/x86_64
     image: mysql:5.7.40
     container_name: mysql
     environment:
@@ -16,12 +16,3 @@ services:
       - ./data/my.cnf:/etc/mysql/conf.d/my.cnf
     ports:
       - 3306:3306
-
-  redis:
-    image: redis:latest
-    container_name: redis
-    ports:
-      - 6379:6379
-    restart: always
-    volumes:
-      - ./data/redis:/data
