--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,17 +2,18 @@ version: "3.9"
 
 services:
   db:
-    platform: linux/x86_64
-    image: mysql:5.7.40
+    image: mysql:8.3
+    platform: linux/arm64
     container_name: mysql
     environment:
       MYSQL_ROOT_PASSWORD: railsdev
       MYSQL_USER: railsdev
       MYSQL_PASSWORD: railsdev
+      TZ: "Asia/Tokyo"
     restart: always
-    command: mysqld --skip-grant-tables --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
+    ports:
+      - 3306:3306
     volumes:
       - ./data/mysql:/var/lib/mysql
       - ./data/my.cnf:/etc/mysql/conf.d/my.cnf
-    ports:
-      - 3306:3306
+    command: mysqld --skip-grant-tables --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
