--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,10 @@ services:
     ports:
       - 3306:3306
     volumes:
+      - db-store:/var/lib/mysql
+      - ./logs:/var/log/mysql
       - ./data/mysql:/var/lib/mysql
       - ./data/my.cnf:/etc/mysql/conf.d/my.cnf
-    command: mysqld --skip-grant-tables --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
+
+volumes:
+  db-store:
