--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,7 @@ services:
   redis:
     image: redis:7.2
     container_name: redis
+    restart: always
     ports:
       - 6379:6379
     volumes:
